--- a/nflapp/nflapp/templates/base.html
+++ b/nflapp/nflapp/templates/base.html
@@ -4,14 +4,45 @@
 		<meta charset="utf-8">
 		<title>{% block title %}{% endblock %}</title>
 
-		<link rel="stylesheet/less" type="text/css" href="{{STATIC_URL}}css/styles.less" />
+		<!--FOUC fix-->
+		<style type="text/css">
+			.js .fouc { display: none; }
+		</style>
+		<script type="text/javascript">
+			document.documentElement.className = 'js';
+		</script>
 
-		<script src="{{STATIC_URL}}js/less.min.js" type="text/javascript"></script>
+		<!--CSS-->
+		<link rel="stylesheet/less" type="text/css" href="{{STATIC_URL}}css/styles.less" />
+		<style type="text/css">
+			{% for team in teams %}
+			#{{team.team_id}} {
+				background-color: {{team.color2}};
+				color: {{team.color1}};
+			}
+			{% endfor %}
+		</style>
 	</head>
 	<body>
-		<div class="content">
+
+
+
+		<div class="content fouc">
 			{% block content %}
 			{% endblock %}
 		</div>
+
+		<!--Utilities-->
+		<script src="{{STATIC_URL}}js/less.min.js" type="text/javascript"></script>
+		<script src="{{STATIC_URL}}js/jquery-2.1.3.min.js" type="text/javascript"></script>
+
+		<!--Template Scripts-->
+		{% block scripts %}
+		{% endblock %}
+
+		<!--FOUC fix-->
+		<script type="text/javascript">
+			document.querySelector(".fouc").style.display = "block";
+		</script>
 	</body>
 </html>
