--- a/nflapp/nflapp/templates/base.html
+++ b/nflapp/nflapp/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 		<meta charset="utf-8">
 		<title>{% block title %}{% endblock %}</title>
 
-		<!--FOUC fix-->
+		<!-- FOUC fix -->
 		<style type="text/css">
 			.js .fouc { display: none; }
 		</style>
@@ -12,22 +13,21 @@
 			document.documentElement.className = 'js';
 		</script>
 
-		<!--Polymer-->
+		<!-- Polymer -->
 		<script src="{{STATIC_URL}}vendor/webcomponentsjs/webcomponents-lite.min.js" type="text/javascript"></script>
 		<link rel="import" href="{{STATIC_URL}}vendor/polymer/polymer.html">
+		<link rel="import" href="{{STATIC_URL}}vendor/iron-ajax/iron-ajax.html">
+		<link rel="import" href="{{STATIC_URL}}vendor/iron-flex-layout/iron-flex-layout.html">
+		<link rel="import" href="{{STATIC_URL}}vendor/paper-spinner/paper-spinner.html">
+		<link rel="import" href="{{STATIC_URL}}components/game-viewlet.html">
+		<link rel="import" href="{{STATIC_URL}}components/global-style.html">
+		<link rel="import" href="{{STATIC_URL}}components/page-main.html">
 		{% block polymerImports %}
 		{% endblock %}
 
-		<!--CSS-->
-		<!-- <link rel="stylesheet/less" type="text/css" href="{{STATIC_URL}}css/index.less"> -->
-		<!-- <style type="text/css">
-			{% for team in teams %}
-			#{{team.team_id}} {
-				background-color: {{team.color2}};
-				color: {{team.color1}};
-			}
-			{% endfor %}
-		</style> -->
+		<!-- Font -->
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oswald:300,400,700' type='text/css'>
+
 	</head>
 	<body>
 
@@ -35,19 +35,6 @@
 			{% block content %}
 			{% endblock %}
 		</div>
-
-		<!--Utilities-->
-		<!-- <script type="text/javascript">
-			less = {
-				logLevel: 1
-			};
-		</script>
-		<script src="{{STATIC_URL}}js/less.min.js" type="text/javascript"></script>
-		<script src="{{STATIC_URL}}js/jquery-2.1.3.min.js" type="text/javascript"></script> -->
-
-		<!--Template Scripts-->
-		{% block scripts %}
-		{% endblock %}
 
 		<!--FOUC fix-->
 		<script type="text/javascript">
