--- a/nflapp/nflapp/static/components/nfl-feed.html
+++ b/nflapp/nflapp/static/components/nfl-feed.html
@@ -1,7 +1,9 @@
 <link rel="import" href="../vendor/carbon-route/carbon-route.html">
 <link rel="import" href="../vendor/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../vendor/neon-animation/neon-animated-pages.html">
-<link rel="import" href="../vendor/neon-animation/animations/slide-left-animation.html">
+<link rel="import" href="../vendor/neon-animation/animations/fade-in-animation.html">
+<link rel="import" href="../vendor/neon-animation/animations/fade-out-animation.html">
+<link rel="import" href="../vendor/neon-animation/animations/ripple-animation.html">
 
 <link rel="import" href="page-game.html">
 <link rel="import" href="page-main.html">
@@ -13,6 +15,7 @@
 		:host {
 			@apply(--layout-fit);
 			@apply(--layout-vertical);
+			overflow: hidden;
 		}
 
 		neon-animated-pages {
@@ -31,11 +34,11 @@
 		<!-- <carbon-location route="{{route}}"></carbon-location>
 		<carbon-route route="{{route}}" pattern="/:page" data="{{data}}" tail="{{tail}}"></carbon-route> -->
 
-		<neon-animated-pages selected="{{_selectedPage}}" entry-animation="0" exit-animation="slide-left-animation">
+		<neon-animated-pages id="pages" selected="0">
 
-			<page-main></page-main>
+			<page-main selected-game="{{selectedGame}}" on-game-viewlet-tap="_handleMainPageGameViewletTap"></page-main>
 
-			<page-game></page-game>
+			<page-game game="{{selectedGame}}" on-back-tap="_handleGamePageBackTap"></page-game>
 			
 		</neon-animated-pages>
 
@@ -49,11 +52,19 @@
 		is: "nfl-feed",
 
 		properties: {
-			_selectedPage: {
+			/*_selectedPage: {
 				type: Number,
 				value: 0
-			}
+			}*/
 		},
+
+		_handleGamePageBackTap: function() {
+			this.$.pages.selected = 0;
+		},
+
+		_handleMainPageGameViewletTap: function(e) {
+			this.$.pages.selected = 1;
+		}
 	});
 
 </script>
