--- a/nflapp/nflapp/static/components/week-selector.html
+++ b/nflapp/nflapp/static/components/week-selector.html
@@ -26,6 +26,7 @@
 			<option value="2013">2013</option>
 			<option value="2014">2014</option>
 			<option value="2015" selected>2015</option>
+			<option value="2016">2016</option>
 		</select>
 
 		<select class="dropdown" id="weekTypeSelector" on-input="_handleInputWeekType">
